add feature extraction

--- a/demo/get_bbox_features_vcr.ipynb
+++ b/demo/get_bbox_features_vcr.ipynb
@@ -168,7 +168,7 @@
     "        \n",
     "        features = {'image_features' : obj_rep[0],\n",
     "                    'object_features' : obj_rep[1:]}\n",
-    "#         pickle.dump(features, open(os.path.join(OUTPUT_DIR,id+'.pkl'),'wb'))"
+    "        pickle.dump(features, open(os.path.join(OUTPUT_DIR,id+'.pkl'),'wb'))"
    ]
   },
   {
